--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,12 @@
 
 <section class="ae-container-fluid rk-main">
 
-    <app-about> </app-about>
+  <!--  <app-portafolio> </app-portafolio> -->
+  
+   <!-- <app-about> </app-about> -->
 
+    <app-portafolio-item></app-portafolio-item>
+    
 </section>
 
 <app-footer></app-footer>
