--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
   
    <!-- <app-about> </app-about> -->
 
-    <app-portafolio-item></app-portafolio-item>
+    <!-- <app-portafolio-item></app-portafolio-item> -->
+
+    <router-outlet></router-outlet>
     
 </section>
 
