--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,7 +29,10 @@
           </ul>
 
           <form class="rk-search">
-            <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+            <input  name="buscar"
+                #buscarTexto
+                (keyup.enter)="buscarProducto( buscarTexto.value )"
+                type="text" placeholder="Buscar..." id="urku-search" class="rk-search-field">
             <label for="urku-search">
               <svg>
                 <use xlink:href="assets/img/symbols.svg#icon-search"></use>
